# moveon

./: CMakeLists.txt  Motion Control High Level Design.docx  openai
include/motion/: ActuatorManager.h  MotionController.h  PIDController.h  SensorManager.h
src/: ActuatorManager.cpp  MotionController.cpp  PIDController.cpp  SensorManager.cpp  main.cpp
